vac-rs/crates/surfaces/tui/src/bottom_pane/chat_composer/snapshots/vac_tui__bottom_pane__chat_composer__tests__slash_popup_mo.snap
---
source: crates/surfaces/tui/src/bottom_pane/chat_composer/footer_flash_parts/../split_002_footerflash_tests.rs.inc
assertion_line: 2855
expression: terminal.backend()
---
"                                                            "
"› /mo                                                       "
"                                                            "
"  /model  choose what model and reasoning effort to use     "
"          ready / vac.identity                              "
